Adds devices to layout.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,10 +12,10 @@
 
 <ion-content>
   <ion-list>
-    <ion-card-content ion-item>
-      <p>{{'"device.name"'}}</p>
-      <p>{{'"device.id"'}}</p>
-      <p> RSSI: {{'"device.rssi"'}}</p>
+    <ion-card-content ion-item *ngFor="let device of devices">
+      <p>{{device.name}}</p>
+      <p>{{device.id}}</p>
+      <p> RSSI: {{device.rssi}}</p>
     </ion-card-content>
   </ion-list>
 </ion-content>
