Adds BLE provider to modules.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-title>
       Ionic BLE Scanner
     </ion-title>
-    <ion-button slot="end">
+    <ion-button (click)="Scan()" slot="end">
       <ion-icon name="Bluetooth"></ion-icon>
       <p>Scan</p>
     </ion-button>
